LCAM-2076 - Outstanding Assessment Checks (#1173)
* feat: add specifications for the three assessments, and service calling them.
* refactor: change existing functionality to use the new specifications and service.
* feat: Adding new outstanding assessment check to passported v1/v2 creation, financial(means) creation. Updated tests, and added Passported Integration tests for both endpoints. Tests now cover both legacy and newer methods, including population of ErrorDTO and ProblemDetails.
* refactor: Added deprecated annotation to the existing checkForOutstandingAssessments endpoint, to be deleted once the consuming services no longer use this.
* feat: Adding integration test for the OutstandingAssessmentService, testing the logic branches and functionality via DB.
* refactor: changing tests to use static values instead of strings.
* chore: removing old outstanding code as isn't referenced anymore.
* fix: stubbing new check in CreatePassportAssessmentV2ValidatorTest.
* fix: Reordering parameters in join based on feedback.
* refactor: adding additional test data to OutstandingAssessmentServiceIntegrationTest to ensure correct behaviour with exists.
* refactor: changing outstanding assessments check to return first error, instead of a list.
refactor: removing legacy check, instead using the newly refactored method.
* test: Adding additional test to ensure validator behaviour for outstanding assessment.
* chore: applying spotless.
* refactor: replacing jupiter asserts with assertj